# ovsdb

./: .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: FUNDING.yml
ovsdb/: Cargo.toml
ovsdb-build/: Cargo.toml  README.md
ovsdb-build/src/: attributes.rs  entity.rs  enumeration.rs  field.rs  lib.rs  model.rs
ovsdb-client/: Cargo.toml
ovsdb-client/src/: client.rs  lib.rs  result.rs
ovsdb/src/: client.rs  lib.rs  macros.rs  result.rs
ovsdb/src/protocol/: codec.rs  enumeration.rs  map.rs  message.rs  mod.rs  optional.rs  request.rs  response.rs  set.rs  uuid.rs
ovsdb/src/protocol/method/: echo.rs  get_schema.rs  list_dbs.rs  mod.rs  transact.rs
ovsdb/src/protocol/request/: method.rs  mod.rs  params.rs
ovsdb/src/schema/: atomic.rs  column.rs  kind.rs  mod.rs  table.rs
src/: lib.rs  main.rs  request.rs  response.rs
src/api/generator/: mod.rs
src/client/: connection.rs  generator.rs  mod.rs  request.rs
src/client/generator/: attribute.rs  field.rs  field_enum.rs  mod.rs  model.rs
src/ovnnb/: mod.rs
src/ovs/: connection.rs  mod.rs
src/ovsdb/: mod.rs  types.rs
src/ovsdb/value/: atom.rs  set.rs
src/protocol/: codec.rs  enumeration.rs  map.rs  mod.rs  request.rs  response.rs  set.rs  uuid.rs
src/protocol/request/: method.rs  mod.rs  params.rs
src/protocol/value/: atom.rs  map.rs  mod.rs  scalar.rs  set.rs  uuid.rs
src/rpc/: codec.rs  mod.rs
src/schema/: column.rs  data_type.rs  mod.rs  models.rs  table.rs
