[package]
name = "ovsdb-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_tuple = "0.5.0"
thiserror = "1.0.50"
uuid = { version = "1.5.0", features = ["v4", "serde"] }

[[bin]]
name = "ovsdbrs"
path = "src/main.rs"
doc = false
