[package]
name = "ovsdb-build"
description = "OVSDB schema compiler"
documentation = "https://docs.rs/ovsdb-build/0.0.5"
edition = "2021"
homepage = "https://git.dubzland.com/holodekk/ovsdb"
authors = ["Josh Williams <jdubz@holodekk.io>"]
categories = ["network-programming", "database-interfaces"]
version = "0.0.5"
repository = "https://git.dubzland.com/holodekk/ovsdb.git"
license = "MIT"
readme = "README.md"

[dependencies]
ovsdb = "0.0.5"
convert_case = "0.6.0"
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2.16"
syn = { version = "2", default-features = false, features = [
  "derive",
  "full",
  "parsing",
  "printing",
  "extra-traits",
] }
thiserror = "1.0.50"
