[package]
name = "ovsdb-client"
version = "0.1.0"
edition = "2021"
repository = "https://git.dubzland.net/holodekk/ovsdb-rust.git"
license-file = "LICENSE"

[dependencies]
ovsdb.workspace = true
async-trait = "0.1.77"
futures = "0.3"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt",
	"rt-multi-thread", "sync"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
