[package]
name = "ovsdb"
version = "0.1.0"
edition = "2021"
repository = "https://git.dubzland.net/holodekk/ovsdb-rust.git"
license-file = "LICENSE"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio-util = { version = "0.7.4", features = ["codec"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
