[package]
name = "ovsdb"
description = """
Rust implementation of the OVSDB schema and wire protocol.
"""
documentation = "https://docs.rs/ovsdb/0.0.1"
edition = "2021"
homepage = "https://git.dubzland.com/holodekk/ovsdb"
authors = ["Josh Williams <jdubz@holodekk.io>"]
categories = ["ovsdb", "sdn", "network-programming", "database-interfaces"]
version = "0.0.1"
repository = "https://git.dubzland.com/holodekk/ovsdb.git"
license = "MIT"

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio-util = { version = "0.7.4", features = ["codec"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
