[package]
name = "ovsdb"
description = """
Rust implementation of the OVSDB schema and wire protocol.
"""
documentation = "https://docs.rs/ovsdb/0.0.4"
edition = "2021"
homepage = "https://git.dubzland.com/holodekk/ovsdb"
authors = ["Josh Williams <jdubz@holodekk.io>"]
categories = ["network-programming", "database-interfaces"]
version = "0.0.4"
repository = "https://git.dubzland.com/holodekk/ovsdb.git"
license = "MIT"
readme = "../README.md"

[dependencies]
erased-serde = "0.4.3"
futures = "0.3"
serde = { version = "1.0.189", features = ["derive", "rc"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1", features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
] }
tokio-util = { version = "0.7.4", features = ["codec"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = { version = "0.4.0" }

[features]
client = []
default = ["client"]

[package.metadata.docs.rs]
all-features = true
